fix(generic-wrapper): reduce range of Gap's size

--- a/packages/generic-wrapper/src/index.module.css
+++ b/packages/generic-wrapper/src/index.module.css
@@ -30,25 +30,25 @@
     align-items: center;
 }
 
-@each $size in 3xs, 2xs, xs, s, m, l, xl, 2xl, 3xl, 4xl, 5xl, 6xl, 7xl, 8xl {
+@each $size in 3xs, 2xs, xs, s, m, l, xl {
     .padding-top-$(size) {
         padding-top: var(--gap-$(size));
     }
 }
 
-@each $size in 3xs, 2xs, xs, s, m, l, xl, 2xl, 3xl, 4xl, 5xl, 6xl, 7xl, 8xl {
+@each $size in 3xs, 2xs, xs, s, m, l, xl {
     .padding-right-$(size) {
         padding-right: var(--gap-$(size));
     }
 }
 
-@each $size in 3xs, 2xs, xs, s, m, l, xl, 2xl, 3xl, 4xl, 5xl, 6xl, 7xl, 8xl {
+@each $size in 3xs, 2xs, xs, s, m, l, xl {
     .padding-bottom-$(size) {
         padding-bottom: var(--gap-$(size));
     }
 }
 
-@each $size in 3xs, 2xs, xs, s, m, l, xl, 2xl, 3xl, 4xl, 5xl, 6xl, 7xl, 8xl {
+@each $size in 3xs, 2xs, xs, s, m, l, xl {
     .padding-left-$(size) {
         padding-left: var(--gap-$(size));
     }
